praying once again for mercy from the maven gods, because only they know wth i did here